# laputa

./: CMakeLists.txt  ReadMe.txt
LaTeX/: Formulae.tex
data/distributions/: beta_lower.distr  beta_neutral.distr  beta_upper.distr  interval_lower.distr  interval_upper.distr  interval_whole.distr
data/ods/: meta.xml  settings.xml  styles.xml
docs/: batchsimulation.htm  degreedistributions.htm  evalue.htm  exportstatistics.htm  exporttopologies.htm  expressions.htm  generation.htm  index.htm  inquirers.htm  introduction.htm  links.htm  metadistributions.htm  multibatch.htm  randomdistributions.htm  simulation.htm  simulationparameters.htm  societies.htm  statistics.htm  tabinquirers.htm  tablinks.htm  tabnetwork.htm  tabrecord.htm
images/: LaputaIcons.psd  SplashScreen.psd  formulae.psd
include/: Amount.h  App.h  BatchSimulation.h  BatchSimulationWindow.h  CMakeLists.txt  CoordinateSelector.h  Distribution.h  DistributionView.h  ExpressionField.h  Files.h  HexField.h  Inquirer.h  Inspectors.h  Link.h  MetaDistribution.h  MultiBatch.h  Parameters.h  Prefix.h  Simulation.h  Society.h  SocietySetup.h  SocietyView.h  StatisticsBlock.h  StatisticsView.h  ToolButton.h  Topology.h  Trust.h  UserInterfaceItems.h  Utility.h
lib/: CMakeLists.txt
lib/mempool/: CMakeLists.txt  mempool.h
lib/minizip/: .gitignore  CMakeLists.txt  iowin32.c  zip.h
lib/tinyxml/: CMakeLists.txt
lib/zlib/: CMakeLists.txt
manual/: Manual.aux  Manual.tex
resources/linux/: laputa.desktop
resources/windows/: .gitignore  Laputa.rc  Resource.h
src/: App.cpp  BatchSimulation.cpp  BatchSimulationWindow.cpp  CMakeLists.txt  CoordinateSelector.cpp  Distribution.cpp  DistributionView.cpp  ExpressionField.cpp  Files.cpp  Inquirer.cpp  Inspectors.cpp  Link.cpp  MetaDistribution.cpp  MultiBatch.cpp  Parameters.cpp  Simulation.cpp  Society.cpp  SocietySetup.cpp  SocietyView.cpp  StatisticsBlock.cpp  StatisticsView.cpp  ToolButton.cpp  Topology.cpp  Trust.cpp  UserInterfaceItems.cpp  Utility.cpp  main.cpp
ui/: CMakeLists.txt  UserInterface.cpp  UserInterface.fld  UserInterface.h  UserInterface.txt
web/: about.html  home.htm  index.htm  menu.htm
web/docs/: batchsimulation.htm  evalue.htm  export.htm  index.htm  inquirers.htm  introduction.htm  links.htm  randomdistributions.htm  simulation.htm  simulationparameters.htm  societies.htm
